--- a/defaultcss.css
+++ b/defaultcss.css
@@ -1,8 +1,13 @@
 .header {
     background-color: #555555;
 }
-.header_description {
+.header_sitename {
     font-size: 100px;
+    text-align: center;
+    color: #000000;
+}
+.header_description {
+    font-size: 10px;
     text-align: center;
     color: #000000;
 }
